--- a/menu/index.html
+++ b/menu/index.html
@@ -433,32 +433,12 @@
                         <h2 class="subheader"><small>IPA</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Buxton Axe Edge<span class="right">6</span></h3>
-                                <p>6,8% 33cl</p>
+                                <h3>Coronado Sock IPA<span class="right">6,5</span></h3>
+                                <p>8,5% 37,5cl</p>
                             </li>
                             <li>
-                                <h3>EvilTwin Hope Flood<span class="right">7</span></h3>
-                                <p>7% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>EvilTwin Molotov Lite<span class="right">7,5</span></h3>
-                                <p>8,5% 50cl</p>
-                            </li>
-                            <li>
-                                <h3>EvilTwin Yang IPA<span class="right">6,5</span></h3>
-                                <p>10% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Flying Dog Raging Bitch<span class="right">6</span></h3>
-                                <p>8,3% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Harbour Double IPA N°4<span class="right">7</span></h3>
-                                <p>7% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Mad Hat Down Rabbit Hole<span class="right">5,5</span></h3>
-                                <p>8% 33cl</p>
+                                <h3>Dark Horse IPA<span class="right">6,5</span></h3>
+                                <p>6,5% 35,5cl</p>
                             </li>
                             <li>
                                 <h3>Mad Hat Drink My Peach<span class="right">5,5</span></h3>
@@ -469,186 +449,95 @@
                                 <p>6,5% 33cl</p>
                             </li>
                             <li>
-                                <h3>Manzanita IPA<span class="right">6</span></h3>
+                                <h3>Napar Alien Claw Belgian IPA<span class="right">6</span></h3>
                                 <p>6,8% 33cl</p>
                             </li>
                             <li>
-                                <h3>Manzanita Chaotic Double IPA<span class="right">6</span></h3>
-                                <p>9,7% 33cl</p>
+                                <h3>Napar Sunset Session IPA<span class="right">6</span></h3>
+                                <p>4,2% 33cl</p>
                             </li>
                             <li>
-                                <h3>Pampus Hope Brothers IPA<span class="right">6</span></h3>
-                                <p>6,5% 35,5cl</p>
+                                <h3>Nebraska IPA<span class="right">6</span></h3>
+                                <p>6,9% 37,5cl</p>
                             </li>
                             <li>
-                                <h3>Thornbridge Japuir IPA<span class="right">7</span></h3>
-                                <p>5,9% 50cl</p>
+                                <h3>The Hop Concept<span class="right">16</span></h3>
+                                <p>8,5% 66cl</p>
+                            </li>
+                             <li>
+                                <h3>Trestles IPA<span class="right">5,5</span></h3>
+                                <p>6,8% 35,5cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>ALE</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Anchor Liberty Ale<span class="right">6</span></h3>
-                                <p>5,9% 35,5cl</p>
+                                <h3>Birrificio del Borgo Maledetta<span class="right">5</span></h3>
+                                <p>6,2% 33cl</p>
                             </li>
                             <li>
-                                <h3>Anchor Steam<span class="right">6</span></h3>
-                                <p>5,9% 35,5cl</p>
+                                <h3>Castelli Italicum<span class="right">5</span></h3>
+                                <p>5% 33cl</p>
                             </li>
                             <li>
-                                <h3>Brooklyn Lager<span class="right">5,5</span></h3>
-                                <p>5,2% 35,5cl</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Stave Surette<span class="right">15</span></h3>
-                                <p>6,2% 37,5cl</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Stave Vielle<span class="right">15</span></h3>
-                                <p>4,2% 37,5cl</p>
-                            </li>
-                            <li>
-                                <h3>Fyne Ales Avalanche<span class="right">8</span></h3>
+                                <h3>EvilTwin Citra Sunshine<span class="right">7,5</span></h3>
                                 <p>4,5% 50cl</p>
                             </li>
                             <li>
-                                <h3>Fyne Ales Hurrican Jack<span class="right">8</span></h3>
-                                <p>4,4% 50cl</p>
+                                <h3>EvilTwin XXX<span class="right">18</span></h3>
+                                <p>9,5% 66cl</p>
                             </li>
                             <li>
-                                <h3>Sierra Nevada Bigfoot<span class="right">7,5</span></h3>
-                                <p>9,6% 35,5cl</p>
+                                <h3>Napar ZZ Amber Ale<span class="right">5,5</span></h3>
+                                <p>5,5% 33cl</p>
                             </li>
                             <li>
-                                <h3>Speakeasy Metropolis Lager<span class="right">6</span></h3>
-                                <p>5,3% 35,5cl</p>
+                                <h3>Nomada Estepa Red Hoppy<span class="right">5</span></h3>
+                                <p>5,5% 33cl</p>
                             </li>
                             <li>
-                                <h3>Speakeasy Prohibition Ale<span class="right">6</span></h3>
-                                <p>6,1% 35,5cl</p>
+                                <h3>Nomada Tundra  Golden Ale<span class="right">5</span></h3>
+                                <p>6% 33cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>PALE ALE</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Craig Allan Provocateur<span class="right">5,5</span></h3>
-                                <p>6,5% 33cl</p>
+                                <h3>EvilTwin Hipster Ale<span class="right">6</span></h3>
+                                <p>5,5% 37,5cl</p>
                             </li>
                             <li>
-                                <h3>Short’s Cerveza de Julie<span class="right">6</span></h3>
-                                <p>5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>The Wall Sunray<span class="right">5,5</span></h3>
-                                <p>5% 33cl</p>
+                                <h3>Napar Pale Ale<span class="right">5,5</span></h3>
+                                <p>5,1% 33cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>BELGHE E TRAPPISTE</small></h2>
+                        <h2 class="subheader"><small>PILS</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Almanac Honey Saison<span class="right">6,5</span></h3>
-                                <p>4,8% 33cl</p>
+                                <h3>Brewfist Imperial Pils<span class="right">5</span></h3>
+                                <p>6,7% 37,5cl</p>
                             </li>
                             <li>
-                                <h3>Ardenne Saison<span class="right">10,5</span></h3>
-                                <p>5,5% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Chimay Doreée<span class="right">5,5</span></h3>
-                                <p>4,8% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>La Chuff Soleil<span class="right">5</span></h3>
-                                <p>6% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>La Trappe Witte<span class="right">4,5</span></h3>
-                                <p>5,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Napar Gentelady<span class="right">6,5</span></h3>
-                                <p>9,2% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Kwak<span class="right">10,5</span></h3>
-                                <p>8,4% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Wadesda #5<span class="right">5,5</span></h3>
-                                <p>5,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Wadesda #6<span class="right">5,5</span></h3>
-                                <p>5,5% 33cl</p>
+                                <h3>Elchbrau Pils<span class="right">4,5</span></h3>
+                                <p>4,9% 50cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>BLANCHE E WEISSE</small></h2>
+                        <h2 class="subheader"><small>BARLEY WINE</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Edelweiss Weissbier<span class="right">5,5</span></h3>
-                                <p>5,4% 50cl</p>
-                            </li>
-                            <li>
-                                <h3>MC77 San Lorenzo Blanche<span class="right">6</span></h3>
-                                <p>5,2% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>MC77 Sofronia Blanche<span class="right">6</span></h3>
-                                <p>5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Weiherer Weisse<span class="right">5,5</span></h3>
-                                <p>5,2% 50cl</p>
+                                <h3>Rocket Zaccharine Barley Wine<span class="right">9</span></h3>
+                                <p>7,6% 33cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>STOUT E PORTER</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Buxton Imperial Black<span class="right">6</span></h3>
-                                <p>7,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Cromarty Ghost Town<span class="right">7,5</span></h3>
-                                <p>5,8% 50cl</p>
-                            </li>
-                            <li>
-                                <h3>EvilTwin Soft Dk Porter<span class="right">6,5</span></h3>
-                                <p>5,9% 66cl</p>
-                            </li>
-                            <li>
-                                <h3>Hopevalley Vanilla Porter <span class="right">13</span></h3>
-                                <p>6% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Rocket Total Eclipse<span class="right">7</span></h3>
-                                <p>8,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Speakeasy Payback Porter<span class="right">16</span></h3>
-                                <p>7,5% 66cl</p>
-                            </li>
-                            <li>
-                                <h3>Tupiniquim Monjolo Porter<span class="right">8,5</span></h3>
-                                <p>10,5% 33cl</p>
+                                <h3>Birrificio del Borgo Keto<span class="right">5</span></h3>
+                                <p>5,2% 33cl</p>
                             </li>
                             <li>
                                 <h3>Westbrook Boo Bear’s<span class="right">13,5</span></h3>
-                                <p> 4% 66cl</p>
-                            </li>
-                        </ul>
-                        <h2 class="subheader"><small>FRUTTATE</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Birra del Borgo Rubus<span class="right">13,5</span></h3>
-                                <p>5,8% 75cl</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Stave Cranberry<span class="right">15</span></h3>
-                                <p>4,5% 37,5cl</p>
-                            </li>
-                            <li>
-                                <h3>Mikkeller Raspberries Cream<span class="right">7</span></h3>
-                                <p>5,2% 33cl</p>
+                                <p>4% 66cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>ACIDE</small></h2>
@@ -699,7 +588,7 @@
                                 <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Crimà IGT<span class="right"> 11</span></h3>
+                                <h3>Crimà IGT<span class="right"> 3,5 | 11</span></h3>
                                 <p>conti di buscareto</p>
                             </li>
                         </ul>
@@ -741,10 +630,6 @@
                                 <p>conti di buscareto</p>
                             </li>
                             <li>
-                                <h3>Pestifero 37,5cl<span class="right">6</span></h3>
-                                <p>tavignano</p>
-                            </li>
-                            <li>
                                 <h3>Franciacorta Brut<span class="right">26</span></h3>
                                 <p>mosnel</p>
                             </li>
@@ -764,6 +649,10 @@
                             <li>
                                 <h3>Passito di Verdicchio 50cl<span class="right">24</span></h3>
                                 <p>col di corte</p>
+                            </li>
+                            <li>
+                                <h3>Spumante Moscato Dolce<span class="right">12</span></h3>
+                                <p>val d'oca </p>
                             </li>
                         </ul>
                     </div>
