--- a/menu/index.html
+++ b/menu/index.html
@@ -430,7 +430,7 @@
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Birre artigianali in bottiglia<br><small>50+ birre che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
-                        <h2 class="subheader"><small>IPA</small></h2>
+                        <h2 class="subheader"><small>ipa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Coronado Sock IPA<span class="right">6,5</span></h3>
@@ -469,7 +469,7 @@
                                 <p>6,8% 35,5cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>ALE</small></h2>
+                        <h2 class="subheader"><small>ale</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Birrificio del Borgo Maledetta<span class="right">5</span></h3>
@@ -500,7 +500,7 @@
                                 <p>6% 33cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>PALE ALE</small></h2>
+                        <h2 class="subheader"><small>pale ale</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>EvilTwin Hipster Ale<span class="right">6</span></h3>
@@ -522,14 +522,14 @@
                                 <p>4,9% 50cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>BARLEY WINE</small></h2>
+                        <h2 class="subheader"><small>barley wine</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Rocket Zaccharine Barley Wine<span class="right">9</span></h3>
                                 <p>7,6% 33cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>STOUT E PORTER</small></h2>
+                        <h2 class="subheader"><small>Stout e Porter</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Birrificio del Borgo Keto<span class="right">5</span></h3>
@@ -540,7 +540,7 @@
                                 <p>4% 66cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>ACIDE</small></h2>
+                        <h2 class="subheader"><small>acide</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Crooked Stave Citrus<span class="right">15</span></h3>
@@ -644,7 +644,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Passiti</h2>
+                        <h2 class="subheader">Dolci e Passiti</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Passito di Verdicchio 50cl<span class="right">24</span></h3>
