--- a/menu/index.html
+++ b/menu/index.html
@@ -77,7 +77,7 @@
                     <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cena</a>
                 </li>
                 <li class="tab-title" role="presentational">
-                    <a href="#brunch" role="tab" tabindex="3" aria-selected="false" controls="brunch">Brunch</a>
+                    <a href="#domenica" role="tab" tabindex="3" aria-selected="false" controls="domenica">Domenica</a>
                 </li>
                 <li class="tab-title" role="presentational">
                     <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
@@ -270,29 +270,15 @@
             </div>
         </section>
 <!-- cena fine -->
-<!-- brunch inizio-->
-        <section class="content" role="tabpanel" aria-hidden="true" id="brunch">
+<!-- domenica inizio-->
+        <section class="content" role="tabpanel" aria-hidden="true" id="domenica">
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Tutte le Domeniche. Dalle 12:00 alle 14:00
+                        <h4>Tutte le Domeniche. Dalle 12:00 alle 14:00. Tutto il menù di Ca' Vecchia Beerstrot, più qualche succulenta novità.
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-2n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">special<br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Menù Brunch Special<span class="right">15</span></h3>
-                                <p>uova + pancakes + drink + acqua + caffè</p>
-                            </li>
-                            
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -301,18 +287,6 @@
                     <div class="large-12 medium-12 columns">
                         <h2 class="subheader">Uova<br><small>servite con contorno di patate al forno e insalata</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Eggs Benedict<span class="right">7</span></h3>
-                                <p>due uova in camicia servite su pane tostato con bacon croccante e salsa olandese</p>
-                            </li>
-                            <li>
-                                <h3>Eggs Florentine<span class="right">7</span></h3>
-                                <p>due uova in camicia servite su pane tostato con spinaci e salsa olandese</p>
-                            </li>
-                            <li>
-                                <h3>Eggs Norwegian<span class="right">7,5</span></h3>
-                                <p>due uova in camicia servite su pane tostato con salmone affumicato e salsa olandese</p>
-                            </li>
                             <li>
                                 <h3>Eggs Scrambled<span class="right">7</span></h3>
                                 <p>due uova strapazzate con bacon croccante</p>
@@ -332,11 +306,11 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">pancakes<br></h2>
+                        <h2 class="subheader">Primo<br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Pancakes<span class="right">4,5</span></h3>
-                                <p>serviti con sciroppo d’acero e rondelle di banana con cioccolato fuso</p>
+                                <h3>Lasagne<span class="right">4,5</span></h3>
+                                <p>bianche con ragù di carne</p>
                             </li>
                         </ul>
                     </div>
@@ -345,35 +319,25 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">drinks<br></h2>
+                        <h2 class="subheader">Secondi<br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Mimosa<span class="right">5</span></h3>
-                                <p>spumante brut e succo di arancia</p>
+                                <h3>Agnello al Forno<span class="right">15</span></h3>
+                                <p>servito con patate arrosto</p>
                             </li>
                             <li>
-                                <h3>Bellini<span class="right">5</span></h3>
-                                <p>spumante brut e succo di pesca</p>
+                                <h3>Grigliata Mista<span class="right">15</span></h3>
+                                <p>salsiccia artigianale, manzo, costine, agnello</p>
                             </li>
                             <li>
-                                <h3>Bloody Mary<span class="right">5</span></h3>
-                                <p>vodka, succo di pomodoro, succo di limone, salsa worcestershire, tabasco, sale di sedano, pepe</p>
-                            </li>
-                            <li>
-                                <h3>Birra Artigianale Piccola<span class="right">4</span></h3>
-                                <p>scelta fra otto birre artigianali locali</p>
-                            </li>
-                            <li>
-                                <h3>Succo di Mela<span class="right">3</span></h3>
-                            </li>
-                            <li>
-                                <h3>Succo di Arancia<span class="right">3</span></h3>
+                                <h3>Salsiccia Artigianale<span class="right">8,5</span></h3>
+                                <p>servita con krauti e patate arrosto</p>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
