--- a/menu/index.html
+++ b/menu/index.html
@@ -337,7 +337,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-2n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
